Added instagram shit

--- a/rollcall.html
+++ b/rollcall.html
@@ -5,7 +5,8 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="twelve columns">
-      <h2>Cowork Btown Rollcall</h2>
+      <h2 class="l-less-margin">#coworkbtown Paparazzi</h2>
+      <span class="instructions">Tag your Instagram photos with <strong>#coworkbtown</strong> and they'll show up here.</span>
     </div>
   </div>
 </div>
@@ -13,7 +14,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="twelve columns">
-      <div class="instagram"></div>
+      <ul class="instagram"></ul>
     </div>
   </div>
 </div>
