Added rollcall to menu

--- a/rollcall.html
+++ b/rollcall.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="twelve columns">
-      <h2 class="l-less-margin">#coworkbtown Paparazzi</h2>
+      <h2 class="l-less-margin">#coworkbtown Rollcall</h2>
       <span class="instructions">Tag your Instagram photos with <strong>#coworkbtown</strong> and they'll show up here.</span>
     </div>
   </div>
