Added Bess to home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default-home
 
 	     <h2>Where is Cowork Btown?</h2>
 	     
-	     <p>We are located in the beautiful town of Bloomington, IN.  We are looking to move into Prospect Hill Place in early February.  This is still tentative but the wheels are in motion to make this happen.  We are currently taking applications for the new space <a href="application.html">here</a>.</p>
+	     <p>We are located in the beautiful town of Bloomington, IN.  We are moving into Prospect Hill Place on February 1st and will be open for coworking very son after that.  We are currently taking applications for the new space <a href="application.html">here</a>.</p>
 
 	     <h4>Membership Plans</h4>
 	     <table>
@@ -111,6 +111,8 @@ layout: default-home
 	     <h5>Founder of dpc design</h5>
 	  </div>
 	  <div class="three columns">
-	     
+	     <img src="images/coworkers/bess.png" alt="Bess">
+	     <h3><a href="http://twitter.com/bessington">Bess Fernandez</a></h3>
+	     <h5>Front-end developer and writer</h5>
 	  </div>
 	</div>
