Added Studio Cypher to home page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@ layout: default-home
 	     <h5>Principal/graphic designer Jenny El-Shamy Design</h5>
 	  </div>
 	  <div class="three columns">
-	     
+	     <img src="images/coworkers/ss.png" alt="Studio Cypher">
+	     <h3><a href="http://www.studiocypher.com/">Studio Cypher</a></h3>
+	     <h5>Ian, Nathan and Will</h5>
 	  </div>
 	  <div class="three columns">
 	     
