Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default-home
 	  <div class="eight column">
 	     <h1>Work is so much better with awesome coworkers</h1>
 
-	     <p>We're a group that could work from anywhere we want but have learned the amazing value of working together.  We not only share a space but a comon goal to make each other better and our community better.</p>
+	     <p>We're a group that could work from anywhere we want but have learned the amazing value of working together.  We not only share a space but a common goal to make each other better and our community better.</p>
 
 	     <p>We are a group of designers, developers, entrepreneurs, contractors, remote workers, musicians and much more.  We welcome professionals of all sorts to join us in our mission to work better, share knowledge, teach, learn, collaborate and have fun.  If this sounds like what you're looking for you should come <a href="application.html">meet us</a>.</p>
 
