Changed Tyler's link and updated some of the copy.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default-home
 
 	     <p>We're a group that could work from anywhere we want but have learned the amazing value of working together.  We not only share a space but a common goal to make each other better and our community better.</p>
 
-	     <p>We are a group of designers, developers, entrepreneurs, contractors, remote workers, musicians and much more.  We welcome professionals of all sorts to join us in our mission to work better, share knowledge, teach, learn, collaborate and have fun.  If this sounds like what you're looking for you should come <a href="application.html">meet us</a>.</p>
+	     <p>We are a group of designers, developers, entrepreneurs and all things tech.  We welcome other tech professionals to join us in our mission to work better, share knowledge, teach, learn, collaborate and have fun.  If this sounds like what you're looking for you should come <a href="application.html">meet us</a>.</p>
 
 	     <h2>Where is Cowork Btown?</h2>
 	     
@@ -84,7 +84,7 @@ layout: default-home
 	  </div>
 	  <div class="three columns">
 	     <img src="images/coworkers/tyler.jpg" alt="Tyler">
-	     <h3><a href="http://twitter.com/tyleronthejohn">Tyler Henke</a></h3>
+	     <h3><a href="http://yellowdoes.com">Tyler Henke</a></h3>
 	     <h5>Co-Founder of Yellow</h5>
 	  </div>
 	  <div class="three columns">
