Removed music from the events page for all the gray beard tards.

--- a/events.html
+++ b/events.html
@@ -19,7 +19,6 @@ layout: default
              <li>iOS Development</li>
              <li>General Technology</li>
              <li>Youth Technology Outreach</li>
-             <li>and even music lessons</li>
           </ul>
        </div>
     </div>
@@ -58,8 +57,8 @@ layout: default
     </div>
     <div class="three columns">
        <h3><a href="http://twitter.com/brandonjp">Brandon Pfeiffer</a></h3>
-       <h5>Front End Developer and Musician</h5>
-       <p>Brandon is an amazing talent when it comes to front end development.  His talents don't end there.  He's an amazing musician who loves to perform and teach others.</p>
+       <h5>Front End Developer</h5>
+       <p>Brandon is an amazing talent when it comes to front end development.</p>
     </div>
     <div class="three columns">
        <img src="images/coworkers/aaron.jpg" alt="Aaron">
