Removed ph from site.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default-home
 
 	     <h2>Where is Cowork Btown?</h2>
 	     
-	     <p>We are located in the beautiful town of Bloomington, IN.  We are moving into Prospect Hill Place on February 1st and will be open for coworking very son after that.  We are currently taking applications for the new space <a href="application.html">here</a>.</p>
+	     <p>We are located in the beautiful town of Bloomington, IN.  We are moving into a space in the very near future.  We are currently taking applications for the new space <a href="application.html">here</a>.</p>
 
 	     <h4>Membership Plans</h4>
 	     <table>
@@ -40,17 +40,6 @@ layout: default-home
 	     <p>&nbsp;</p>
 	     <p><a class="btn primary" href="application.html">Apply for a Spot</a></p>
 	     <p>&nbsp;</p>
-	     
-	     <h4>The Space</h4>
-	     <address style="position: relative; bottom: 1.4em;">Prospect Hill Place <br>
-	     511 W 4th St <br>
-	     Bloomington, IN 47404</address>  
-	     <p><img src="images/space/ph-01.jpg" alt="Prospect Hill Place"></p> 
-	     <p><img src="images/space/ph-02.jpg" alt="Prospect Hill Place"></p> 
-	     <p><img src="images/space/ph-03.jpg" alt="Prospect Hill Place"></p> 
-	     <p><img src="images/space/ph-04.jpg" alt="Prospect Hill Place"></p> 
-
-
 	  </div>                        
 
 	  <div class="four column">
