--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@ layout: default-home
 ---
 
 	<div class="container">
+		<div class="row">
+			<div class="twelve column">
+				<h1 class="hero">Work is so much better with awesome coworkers</h1>
+			</div>
+		</div>	
 	<div class="row l-white-bg">
 	  <div class="eight column">
-	     <h1>Work is so much better with awesome coworkers</h1>
-
+	  	<h2>About us</h2>
 	     <p>We're Yellow, a team made up of several of Bloomington's most talented designers, developers, and business experts — all of which have different areas of expertise and professional backgrounds. Because each project is assigned a custom team, co-op members avoid everyday monotonies and elicit each other’s creative skills. This allows Yellow to produce the best products and happiest clients anywhere.</p>
 
 	     <p>We are always looking for awesome people to work with so if we have space we rent desk space.  You don't have to be employed by Yellow to work here.  If you would be interested in renting a desk fill out our application and we'll get back with you to see if you would be a good fit and if we have space for you.</p>
@@ -18,12 +22,10 @@ layout: default-home
 	  </div>                        
 
 	  <div class="four column">
-	     <div class="highlightBg">
-	        <h2>Interested in working with us?</h2>  
-	        <p>Desk space is limited so if you are interested let us know know.  If we don't have a space open now we'll put you on the list to join us as soon as a space opens up.</p>
-	        <p>To get the ball rolling fill out our application form so we can get to know you a little better.</p>
-	        <p><a class="btn primary" href="application.html">Apply</a></p>
-	     </div><!-- /div.hightlightBg -->                      
+	    <h4>Interested in working with us?</h4>  
+	    <p>Desk space is limited so if you are interested let us know know.  If we don't have a space open now we'll put you on the list to join us as soon as a space opens up.</p>
+	    <p>To get the ball rolling fill out our application form so we can get to know you a little better.</p>
+	    <p><a class="btn primary" href="application.html">Apply</a></p>
 	  </div><!-- /div.row -->
 	</div>
 
