--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ layout: default-home
 	     
 	     <p>We are located in the beautiful town of Bloomington, IN.  We just moved into our space not even a block off the square!  We're still settling in but we'll post more information and pictures once we're all set up.  If you'd like to visit us feel free to reach out to any of our members to schedule a drop by.</p>
 
+	     <iframe width='597' height='300' frameBorder='0' src='http://a.tiles.mapbox.com/v3/internetaaron.map-3ohi3w7u.html#16/39.167699999999996/-86.5325'></iframe>
+
 	  </div>                        
 
 	  <div class="four column">
