--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default-home
 	  <div class="four column">
 	    <h4>Interested in working with us?</h4> 
 
-	    <p>We want to work next to people that walk, talk, and think like us. Plain Space is a free coworking space so don't be afraid to stop by for the day.</p>
+	    <p>We want to work next to people that walk, talk, and think like us. Cowork Btown is an open coworking space so don't be afraid to stop by for the day to see if it'd be a good fit for you.</p>
 
 			<p>Are you one of us? <br><a class="btn primary" href="mailto:aaron@callmeaaron.com">Contact Us</a></p>
 
