--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ layout: default-home
 	  </div>                        
 
 	  <div class="four column">
-	    <h4>Interested in working with us?</h4> 
+	    <h4>Interested in becoming a member?</h4> 
 
 	    <p>Cowork Btown is an open coworking space so don't be afraid to stop by for the day to see if it'd be a good fit for you.  If you think you're interested in joining us fill out our application form.</p>
 
