Added new pictures

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ layout: default-home
 	     
 	     <p>We are located in the beautiful town of Bloomington, IN.  We just moved into our space not even a block off the square!  Our space has a large open working area with several dedicated desk and drop in work stations.  We have two meeting rooms.  One is more traditional with a conference table and whiteboard.  The other is more casual with comfortable seating and a TV.  If you'd like to visit us feel free to drop by during normal work hours through the week or keep an eye out for one of our open events.</p>
 
+	     <p><img class="border" src="http://f.cl.ly/items/3d2G1w3s3y421p1n362e/biz_fourpeople_0621.jpg" alt="Office"><small>David Snodgress | Herald-Times</small></p>
+	     <p><img class="border" src="http://f.cl.ly/items/3Y2H1k3o381p423y2p0H/biz_entry_0621.jpg" alt="Office"><small>David Snodgress | Herald-Times</small></p>
+	     <p><img class="border" src="http://f.cl.ly/items/1v2e031x1L2U0F2T2h3U/cowork-working.jpg" alt="Office"></p>
+
+	     <p>&nbsp;</p>
+
 	     <h4>Membership Plans</h4>
 	     <table>
 	       <tbody>
@@ -55,8 +61,6 @@ layout: default-home
 	     <h2>Where is Cowork Btown?</h2>
 			 
 			<p>Cowork Btown is currently located at 117 West 6th Street, just across from Pheonix Comics. There are a limited number of dedicated desks still available and abundant “drop-in” workspaces.</p>
-
-	     <p><img class="border" src="images/space/office.jpg" alt="Office"></p>
 
 	     <address>
 				Cowork Btown Office <br>
