--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ layout: default-home
 	  </div>
 	  <div class="three columns">
 	     <img src="images/coworkers/josh.jpg" alt="Josh">
-	     <h3><a href="http://www.linkedin.com/in/joshuaarcurio/">Josh Arcuio</a></h3>
+	     <h3><a href="http://www.linkedin.com/in/joshuaarcurio/">Josh Arcurio</a></h3>
 	     <h5>Project Manager at DLGV</h5>
 	  </div>
 	</div>
