Updated plans and my work info

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@ layout: default-home
 	         <tr>
 	           <td>
 	           	<h4>Designated Desk</h4>
-	           	<p>Includes permanent desk and chair, the freedom to do with them as you please, and 24/7 key access.</p>
+	           	<p>Includes permanent desk and chair, the freedom to do with them as you please, access to the conference room and 24/7 key access.</p>
 	           </td>
 	           <td><strong>$255/month</strong></td>
 	         </tr>
 	         <tr>
 	           <td>
-	           	<h4>Drop-In</h4>
+	           	<h4>Part Time</h4>
 	           	<p>We can't guarantee a desk to yourself, but there's always somewhere to sit! Drop-ins are invited to hangout at the space up to 15 hours each week, may attend all after hours events, and are able to rent the conference room twice per month. Sorry, no key, but doors are open from 8:00 AM to 7:00 PM most days.</p>
 	           </td>
 	           <td><strong>$65/month</strong></td>
 	         </tr>
 	         <tr>
 	           <td>
-	           	<h4>Day-to-Day</h4>
+	           	<h4>Drop-In</h4>
 	           	<p>Here, everyone's welcome. While events and space rental are reserved for our members, we encourage all community members to stop in and see what we're about. If you feel like hanging out, please consider leaving a small donation – a coffee's worth is more than enough.</p>
 	           </td>
 	           <td><strong>Donation</strong></td>
@@ -105,7 +105,7 @@ layout: default-home
 	  <div class="three columns">
 	     <img src="images/coworkers/aaron.jpg" alt="Aaron">
 	     <h3><a href="http://twitter.com/internetaaron">Aaron White</a></h3>
-	     <h5>Lead Designer at Viddler</h5>
+	     <h5>UX Developer at Formstack</h5>
 	  </div>
 	  <div class="three columns">
 	     <img src="images/coworkers/forrest.jpg" alt="Forrest">
