--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ layout: default-home
 
 			<h5>Wednesday Night Owl</h5>
 			<small>July 10th, 7:00 PM – 2:00 AM</small>
+			<p><img src="images/site/night-owls.jpg" alt=""></p>
 			<p>Stop by after work for a night of nerd! Cowork Btown will have unlimited beer, pizza, music, and camaraderie. Take the opportunity to share what you’ve been working on, learn more about Bloomington happenings, and/or tackle a side project.</p>
 			<p><a href="http://www.formstack.com/forms/?1498820-dbLnXJ2ISr" class="btn primary">RSVP</a></p>
 
