--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default-home
 	           </td>
 	           <td>
 	           	<p><strong>Donation</strong></p>
-	           	<p><small>Just come one in and we'll work out the donation.</small></p>
+	           	<p><small>Just come on in and we'll work out the donation.</small></p>
 	           </td>
 	         </tr>
 	         <tr>
