Added tim to the home page

--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@ layout: default-home
 	     <h5>Co-Founder of Yellow</h5>
 	  </div>
 	  <div class="three columns">
-	     <img src="images/coworkers/ciaran.jpg" alt="Ciarán">
+	    <img src="images/coworkers/ciaran.jpg" alt="Ciarán">
 			<h3><a href="https://www.mensani.com">Ciarán Byrne</a></h3>
 			<h5>CEO Mensani</h5>
 	  </div>
 	  <div class="three columns">
-	  	
+	  	<img src="images/coworkers/tim.jpg" alt="Tim">
+			<h3><a href="https://twitter.com/tskaggs">Tim Skaggs</a></h3>
+			<h5>Front-End Developer at Kloudless</h5>
 	  </div>
 	  <div class="three columns">
 	     
