--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ layout: default-home
 
 			<h5>Wednesday Night Owls</h5>
 			<small>September 18th, 7:00 PM – Midnight</small>
-			<p><img src="images/site/night-owls-logo.jpg" alt="Night Owls"></p>
+			<p><a href="nightowl.html"><img src="images/site/night-owls-logo.jpg" alt="Night Owls"></a></p>
 			<p>Stop by after work for a night of nerd! Cowork Btown will have unlimited beer, pizza, music, and camaraderie. Take the opportunity to share what you’ve been working on, learn more about Bloomington happenings, and/or tackle a side project.</p>
 			<p><a href="http://www.formstack.com/forms/?1498820-dbLnXJ2ISr" class="btn primary">RSVP</a></p>
 
