--- a/rollcall.html
+++ b/rollcall.html
@@ -1,12 +1,11 @@
 ---
-layout: default
+layout: default-new
 ---
 
 <div class="container">
   <div class="row">
     <div class="twelve columns">
-      <h2 class="l-less-margin">#coworkbtown Rollcall</h2>
-      <span class="instructions">Tag your Instagram photos with <strong>#coworkbtown</strong> and they'll show up here.</span>
+      <h3 class="rollcall">Tag your Instagram photos with <strong>#coworkbtown</strong> and they'll show up here.</h3>
     </div>
   </div>
 </div>
