--- a/rollcall.html
+++ b/rollcall.html
@@ -13,7 +13,7 @@ layout: default-new
 <div class="container">
   <div class="row">
     <div class="twelve columns">
-      <ul class="instagram"></ul>
+      <div id="instafeed"></div>
     </div>
   </div>
 </div>
