Added drew to site.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@ layout: default-home
 	     <h5>Principal at ü marketing+more llc</h5>
 	  </div>
 	  <div class="three columns">
-	    
+	    <img src="images/coworkers/drew.jpg" alt="Drew">
+	     <h3><a href="http://www.linkedin.com/in/drewloomer">Drew Loomer</a></h3>
+	     <h5>Senior Web Developer at Hook Studios</h5>
 	  </div>
 	  <div class="three columns">
 	  	
