Added Dave to site.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@ layout: default-home
 		<h5>Senior Web Developer at Hook Studios</h5> 
 	  </div>
 	  <div class="three columns">
-	    
+	    <img src="images/coworkers/davebell.jpg" alt="Dave">
+		<h3><a href="http://www.broadlyapplicable.com/">David Bell</a></h3>
+		<h5>Founder and Chief Software Engineer at Broadly Applicable</h5> 	    
 	  </div>
 	  <div class="three columns">
 	  	
