--- a/index.html
+++ b/index.html
@@ -150,30 +150,32 @@ layout: default-home
 		<h5>Principal at ü marketing+more llc</h5>
 	  </div>
 	  <div class="three columns">
-	  	<img src="images/coworkers/tim.jpg" alt="Tim">
-			<h3><a href="https://twitter.com/tskaggs">Tim Skaggs</a></h3>
-			<h5>Front-End Developer at Kloudless</h5>
-	  </div>
-	  <div class="three columns">
-	    <img src="images/coworkers/james.jpg" alt="James">
+			<img src="images/coworkers/james.jpg" alt="James">
 			<h3><a href="http://www.linkedin.com/profile/view?id=11777853&trk=nav_responsive_tab_profile">James Capo</a></h3>
 			<h5>VP at Access Intelligence</h5>
 	  </div>
-	</div>
-
-	<div class="row coworkers">
 	  <div class="three columns">
 	    <img src="images/coworkers/drew.jpg" alt="Drew">
 		<h3><a href="http://www.linkedin.com/in/drewloomer">Drew Loomer</a></h3>
 		<h5>Senior Web Developer at Hook Studios</h5> 
 	  </div>
+	</div>
+
+	<div class="row coworkers">
 	  <div class="three columns">
 	    <img src="images/coworkers/davebell.jpg" alt="Dave">
 		<h3><a href="http://www.broadlyapplicable.com/">David Bell</a></h3>
-		<h5>Founder and Chief Software Engineer at Broadly Applicable</h5> 	    
+		<h5>Founder and Chief Software Engineer at Broadly Applicable</h5> 	 
+	  </div>
+	  <div class="three columns">   
+	    <img src="images/coworkers/jen.jpg" alt="jen">
+		<h3><a href="#">Jennifer Richler</a></h3>
+		<h5>Freelance Writer</h5> 
 	  </div>
 	  <div class="three columns">
-	  	
+	  	<img src="images/coworkers/tim.jpg" alt="Tim">
+		<h3><a href="https://twitter.com/tskaggs">Tim Skaggs</a></h3>
+		<h5>Front-End Developer at Kloudless</h5>
 	  </div>
 	  <div class="three columns">
 	    
