Updates to new space page

--- a/new-space.html
+++ b/new-space.html
@@ -3,104 +3,92 @@ layout: default-new-space
 ---
 
 	<div class="container">
-		<div class="row">
+		<div class="row row--hero">
 			<div class="twelve column">
-				<h1 class="hero">Our community is growing and so is our space</h1>
+				<h1 class="hero">Work is so much better with awesome coworkers<span class="kicker">It's even better in our new wicked awesome space</span></h1>
 			</div>
 		</div>	
+
+		<div class="row l-white-bg">
+			<div class="ten offset-by-one columns">
+				<h4>We're moving to a <strong>new location</strong>!  We are really excited to announce that we're moving to a historic Mitchell Bros building on Walnut Street.  This space will allow our community to continue to grow!</h4>
+			</div>
+		</div>
 	<div class="row l-white-bg">
-	  <div class="six column">
-	  	<h2>We're moving to a new location!</h2>
-	     <p>We are really excited to announce that we're moving to a historic building on Walnut Street.  </p>
- 
-		
-
+	  <div class="four column">
 	     <p><img class="border" src="images/space/mb-ext.jpg" alt="Office"><small>Exterior | New Cowork Btown Office bottom right</small></p>
+	   </div>
+	   <div class="four column">
 	     <p><img class="border" src="images/space/mb-int.jpg" alt="Office"><small>Interior | Drop in area to be renovated</small></p>
-	     <p><img class="border" src="images/space/mb-int-2.jpg" alt="Night Owls Event"><small>Interior | Large area in back for designated desks</small></p>
+	   </div>
+	   <div class="four column">
+	     <p><img class="border" src="images/space/mb-int-2.jpg" alt="Night Owls Event"><small>Interior | Large designated desk area</small></p>
+		</div> 
+	</div>
 
-	  </div>                        
+	<div class="row">
+	  <div class="twelve column">
+	    <h3 class="text-center">New Membership Plans</h3>
 
-	  <div class="six column">
-	    <h4>New Membership Plans</h4>
-	     <table>
-	       <tbody>
-	         <tr>
-	           <td>
-	           	<h4>Designated Desk</h4>
+	    <ul class="plans clearfix">
+	    	<li class="designated">
+	    		<h4>Designated Desk</h4>
+	    		<p><strong>$215/month</strong></p>
 	           	<p>Includes permanent desk and chair, the freedom to do with them as you please, access to the conference room, printer/scanner and 24/7 key access.</p>
-	           </td>
-	           <td>
-	           	<p><strong>$215/month</strong></p>
+	           	
 	           	<p><a class="btn primary" href="http://www.formstack.com/forms/?1498831-kETO2k6R9h">Apply</a></p>
-	           </td>
-	         </tr>
-	         <tr>
-	           <td>
-	           	<h4>Part Time - 3 Days</h4>
+	    	</li>
+	    	<li class="three-days">
+	    		<h4>Part Time - 3 Days</h4>
+	    		<p><strong>$98/month</strong></p>
 	           	<p>This plan gives you access to the space three days a week between 8a-5p.  Stay as long as you'd like those two days as long as you arrive before 5, the door will lock behind you when you leave. You can also use the call and conference rooms, printer/scanner and drink coffee those three days.</p>
-	           </td>
-	           <td>
-	           	<p><strong>$98/month</strong></p>
 	           	<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=b4f5ff3ad31580f28e1a92f02c0facf6">Signup</a></p>
-	           </td>
-	         </tr>
-	         <tr>
-	           <td>
-	           	<h4>Part Time - 2 Days</h4>
+	    	</li>
+	    	<li class="two-days">
+	    		<h4>Part Time - 2 Days</h4>
+	    		<p><strong>$65/month</strong></p>
 	           	<p>This plan gives you access to the space two days a week between 8a-5p.  Stay as long as you'd like those two days as long as you arrive before 5, the door will lock behind you when you leave. You can also use the call and conference rooms, printer/scanner and drink coffee those two days.</p>
-	           </td>
-	           <td>
-	           	<p><strong>$65/month</strong></p>
 	           	<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=b4f5ff3ad31580f28e1a92f02c0facf6">Signup</a></p>
-	           </td>
-	         </tr>
-	         <tr>
-	           <td>
-	           	<h4>Drop-In</h4>
+	    	</li>
+	    	<li class="drop-ins">
+	    		<h4>Drop-In</h4>
+	    		<p><strong>$12/day</strong></p>
 	           	<p>Here, everyone's welcome. If you're in Bloomington for the day, only need ocasional access or just want to give the space a test run this is perfect for you.  This gives you access to our drop-in area, printing/scanning, coffee and our call room.</p>
-	           </td>
-	           <td>
-	           	<p><strong>$12/day</strong></p>
-	           	<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=b4f5ff3ad31580f28e1a92f02c0facf6">Buy now</a></p>
-	           	<p><small>Once you pay you'll get an email with your day pass.</small></p>
-	           </td>
-	         </tr>
-	         <tr>
-	           <td>
-	           	<h4>Corporate Sponsorship</h4>
-	           	<p>Interested in additional meeting space for your team? Access to a pipeline of local talent?  Access to drop in space for your company?  Or you just think that Cowork Btown is great and you want to support this great community? Consider a corporate sponsorship. We'll work out a rate for your company based on your needs, add your company to our website and accomidate anything else outlined in our custom agreement.</p>
-	           </td>
-	           <td>
-	           	<p><strong>Nagotiable</strong></p>
-	           	<p><small>based on needs</small></p>
-	           	<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=5545cc51390178c0d7860c9796ef0593">Contact</a></p>
-	           </td>
-	         </tr>
-	         <tr>
-	       </tbody>
-	     </table>
-			
-	  </div><!-- /div.row -->
+	           	<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=b4f5ff3ad31580f28e1a92f02c0facf6">Buy now</a><br>
+	           	<!-- <small>Once you pay you'll get an email with your day pass.</small></p> -->
+	    	</li>
+	    </ul>
 
-	  <hr>
+	    <div class="corp clearfix">
+	    	<div class="text">
+	    		<h4>Corporate Sponsorship</h4>
+	    		<p><strong>Nagotiable</strong> based on needs.</p>
+	           	<p>Interested in additional meeting space for your team? Access to a pipeline of local talent?  Access to drop in space for your company?  Or you just think that Cowork Btown is great and you want to support this great community? Consider a corporate sponsorship. We'll work out a rate for your company based on your needs, add your company to our website and accomidate anything else outlined in our custom agreement.</p>
+	    	</div>
+	    	<div class="cta">
+	    		<p><a class="btn primary" href="https://coworkbtown.cobot.me/users/new?plan_id=5545cc51390178c0d7860c9796ef0593">Contact</a></p>
+	    	</div>
+	    </div>
+	</div>
+					
+	</div><!-- /div.row -->
+
 
 	  <div class="row">
 	  	<div class="twelve colmuns">
-	  		<h2>Where is the new Cowork Btown?</h2>
-		 
-		<p>Cowork Btown is located at 406 S Walnut St, just across from the Chocolate Moose.</p>
+	  		<h3>Where is the new Cowork Btown?</h3>
 
-		<div class="two columns">
-			<address>
-				Cowork Btown Office <br>
-				406 S Walnut St<br>
-				Bloomington, IN 47401
-			</address>
-		</div>
-		<div class="ten columns">
-			<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v3/internetaaron.g9ckd7l6.html?secure=1#16/39.16270193339321/-86.53384566307068'></iframe>
-		</div>
+			<div class="three columns">
+				<h5>Cowork Btown is located at 406 S Walnut St, just across from the Chocolate Moose.</h5>
+				<address>
+					Cowork Btown Office <br>
+					406 S Walnut St<br>
+					Bloomington, IN 47401
+				</address>
+			</div>
+			<div class="nine columns">
+				<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v3/internetaaron.g9ckd7l6.html?secure=1#16/39.16270193339321/-86.53384566307068'></iframe>
+			</div>
 
 	  	</div>
 	  </div>
