Small copy change

--- a/new-space.html
+++ b/new-space.html
@@ -11,7 +11,7 @@ layout: default-new-space
 
 		<div class="row l-white-bg">
 			<div class="ten offset-by-one columns">
-				<h4>We're moving to a <strong>new location</strong>!  We are really excited to announce that we're moving to a historic Mitchell Bros building on Walnut Street.  This space will allow our community to continue to grow!</h4>
+				<h4>Cowork Btown is moving to a <strong>new location</strong>!  We are really excited to announce that we're moving to a historic Mitchell Bros building on Walnut Street.  This space will allow our community to continue to grow!</h4>
 			</div>
 		</div>
 	<div class="row l-white-bg">
