--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default-new-space
 	     <p><img class="border" src="images/space/backarea.jpg" alt="Office"><small>Interior | Large designated desk area</small></p>
 	   </div>
 	   <div class="four column">
-	     <p><img class="border" src="images/space/front-area.jpg" alt="Front Area"><small>Interior | Large designated desk area</small></p>
+	     <p><img class="border" src="images/space/front-area.jpg" alt="Front Area"><small>Interior | Front area for work and events</small></p>
 		</div> 
 	</div>
 
