--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@ layout: default-new-space
 	     <p><img class="border" src="images/space/mb-ext.jpg" alt="Office"><small>Exterior | New Cowork Btown Office bottom right</small></p>
 	   </div>
 	   <div class="four column">
-	     <p><img class="border" src="images/space/backarea.jpg" alt="Office"><small>Interior | Large designated desk area</small></p>
+	     <p><img class="border" src="images/space/backarea.jpg" alt="Office"><small>Interior | Large open office desk area</small></p>
 	   </div>
 	   <div class="four column">
 	     <p><img class="border" src="images/space/front-area.jpg" alt="Front Area"><small>Interior | Front area for work and events</small></p>
+		</div> 
+	</div>
+
+	<div class="row">
+	  <div class="four column">
+	     <p><img class="border" src="images/space/confroom.jpg" alt="Conference Room"><small>Exterior | Conference Room</small></p>
+	   </div>
+	   <div class="four column">
+	     <p><img class="border" src="images/space/callroom.jpg" alt="Call Room"><small>Interior | Call and small meeting room</small></p>
+	   </div>
+	   <div class="four column">
+	     <p><img class="border" src="images/space/kitchen.jpg" alt="Kitchen Area"><small>Interior | Kitchen Area</small></p>
 		</div> 
 	</div>
 
