Mobile spacing updates

--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@ layout: default-new-space
 	<p>&nbsp;</p>
 
 	<div class="row">
-		<div class="twelve colmuns">
+	  <div class="twelve column">
 			<h3>Where is the new Cowork Btown?</h3>
-
-		<div class="three columns">
-			<h5>Cowork Btown is located at 406 S Walnut St, just a couple blocks south of the square.  <br><br>For you ice cream lovers we are just across the street from the Chocolate Moose.  Who doesn't like ice cream!?</h5>
-		</div>
-		<div class="nine columns">
-			<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v3/internetaaron.g9ckd7l6.html?secure=1#16/39.16270193339321/-86.53384566307068'></iframe>
-		</div>
-
+			<div class="row">
+				<div class="three columns">
+					<h5>Cowork Btown is located at 406 S Walnut St, just a couple blocks south of the square.  <br><br>For you ice cream lovers we are just across the street from the Chocolate Moose.  Who doesn't like ice cream!?</h5>
+				</div>
+				<div class="nine columns">
+					<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v3/internetaaron.g9ckd7l6.html?secure=1#16/39.16270193339321/-86.53384566307068'></iframe>
+				</div>
+			</div>
 		</div>
 	</div>
 
 	<div class="row"><hr></div>
 
 	<div class="row">
-	  <div class="sixteen columns">
+	  <div class="twelve columns">
 	     <h3>Coworkers</h3>
 	  </div>
 	</div>
