--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ layout: default-new-space
 	  </div>
 	  <div class="three columns">
 	  	<img src="images/coworkers/iu.jpg" alt="IU">
-	     <h3><a href="http://kelley.iu.edu/mba/">Indiana University Kelly MBA</a></h3>
+	     <h3><a href="http://kelley.iu.edu/mba/">Indiana University Kelley MBA</a></h3>
 
 	  </div>
 	  <div class="three columns">
