--- a/events.html
+++ b/events.html
@@ -1,71 +1,28 @@
 ---
-layout: default
+layout: default-events
 ---
 
 <div class="container">
   <div class="row">
+    <div class="twelve column">
+      <h1 class="hero">Work is so much better with awesome coworkers<span class="kicker">It's even better in our new wicked awesome space</span></h1>
+    </div>
+  </div>  
+
+  <div class="row l-white-bg">
     <div class="eight columns">
-       <h3>Get training in the hottest technologies taught by experts who use it everyday</h3>
-       <p>We will be hosting several different training courses on open web and several other technologies.  As our community grows we want to host all sorts of other training courses.</p>
-       <p>Interested in attending a training event, we'd love to hear about it.</p>
-       <p><a href="events-form.html" class="btn primary">RSVP For an Event</a> </p>
+      <h3>Night Owl <br> <span class="kicker">Jan 15, 7p - Midnight</span></h3>
+      <p>Stop by after work for a night of nerd! Cowork Btown will have beer, snacks, music, and camaraderie. Take the opportunity to share what you’ve been working on, learn more about Bloomington happenings, and/or tackle a side project.</p>
+
+      <p>Come and stay the whole time or just drop in to say hello.</p>
+      <p><a href="events-form.html" class="btn primary">RSVP</a> </p>
     </div>
     <div class="four columns">
        <div class="highlightBg">
-          <h4>Future Training Courses</h4>
-          <ul class="disc">
-             <li>Web Design</li>
-             <li>Web Development</li>
-             <li>iOS Development</li>
-             <li>General Technology</li>
-             <li>Youth Technology Outreach</li>
-          </ul>
+          <h4>Featured Guest Speaker</h4>
+          <p>TBD - As apart of our night owl events we'll be doing in person or video interviews with some awesome people that we could all learn a thing or two from.</p>
        </div>
     </div>
   </div>
 
-  <div class="row"><hr></div>
-
-  <div class="row">
-    <div class="twelve columns">
-       <h2 style="text-align: center;"><span class="upper">Instructors</span></h2>
-    </div>
-  </div>
-
-  <div class="row instructors">
-    <div class="three columns">
-       <img src="images/coworkers/forrest.jpg" alt="Forrest">
-    </div>
-    <div class="three columns">
-       <h3><a href="http://twitter.com/tweet4esttweet">Forrest Fowler</a></h3>
-       <h5>Co-Founder of Yellow / Lead Developer</h5>
-       <p>Forrest founded his small development agency where they have been building, testing and deploying several Ruby on Rails apps for many amazing businesses and start-ups.</p>
-    </div>
-    <div class="three columns">
-       <img src="images/coworkers/drew.jpg" alt="drew">
-    </div>
-    <div class="three coulmnus">
-       <h3><a href="http://twitter.com/drewux">Drew McKinney</a></h3>
-       <h5>Founder of @bloomingsoft / iOS Developer</h5>
-       <p>Drew has been a successful contractor and founded his own company where he has designed, developed and deployed several profitable apps.</p>
-    </div>
-  </div>
-
-  <div class="row instructors">
-    <div class="three columns">
-       <img src="images/coworkers/brandon.jpg" alt="brandon">
-    </div>
-    <div class="three columns">
-       <h3><a href="http://twitter.com/brandonjp">Brandon Pfeiffer</a></h3>
-       <h5>Front End Developer</h5>
-       <p>Brandon is an amazing talent when it comes to front end development.</p>
-    </div>
-    <div class="three columns">
-       <img src="images/coworkers/aaron.jpg" alt="Aaron">
-    </div>
-    <div class="three columns">
-       <h3><a href="http://twitter.com/internetaaron">Aaron White</a></h3>
-       <h5>Lead Designer at Viddler</h5>
-       <p>Aaron has been designing and developing things on the web for 7 years.  He's an expert in visual design, HTML, CSS and working with handing off front-end designs to developers.</p>
-    </div>
   </div>
