Added Kelly landing page and added formstack to sponsors.

--- a/index.html
+++ b/index.html
@@ -186,20 +186,20 @@ layout: default-new-space
 	</div>
 
 	<div class="row coworkers">
-	  <div class="three columns">
-	     <img src="images/coworkers/yellow.jpg" alt="Yellow">
-	     <h3><a href="http://yellowdoes.com">Yellow</a></h3>
-	  </div>
-	  <div class="three columns">
-	     <img src="images/coworkers/slane.jpg" alt="Slane Capital">
-	     <h3><a href="http://slanecapital.com/">Slane Capital</a></h3>
-	  </div>
-	  <div class="three columns">
-	  	<img src="images/coworkers/iu.jpg" alt="IU">
-	     <h3><a href="http://kelley.iu.edu/mba/">Indiana University Kelley MBA</a></h3>
-
-	  </div>
-	  <div class="three columns">
-	    
-	  </div>
+	    <div class="three columns">
+	       <img src="../images/coworkers/yellow.jpg" alt="Yellow">
+	       <h3><a href="http://yellowdoes.com">Yellow</a></h3>
+	    </div>
+	    <div class="three columns">
+	      <img src="../images/coworkers/iu.jpg" alt="IU">
+	       <h3><a href="http://kelley.iu.edu/mba/">Indiana University Kelley MBA</a></h3>
+	    </div>
+	    <div class="three columns">
+	      <img src="../images/coworkers/formstack.jpg" alt="Formstack">
+	      <h3><a href="http://formstack.com/">Formstack</a></h3>
+	    </div>
+	    <div class="three columns">
+	       <img src="../images/coworkers/slane.jpg" alt="Slane Capital">
+	       <h3><a href="http://slanecapital.com/">Slane Capital</a></h3>
+	    </div>
 	</div>
