updated success message.

--- a/events-success.html
+++ b/events-success.html
@@ -12,7 +12,7 @@ layout: default-events
   <div class="row l-white-bg">
     <div class="twelve columns">
       <div class="success">
-        <p>Thanks for RSVP-ing!!!  We look forward to seeing you!</p>
+        <p>Thanks for RSVP-ing!  We look forward to seeing you!</p>
       </div>
     </div>
   </row>  
