--- a/events.html
+++ b/events.html
@@ -10,8 +10,10 @@ layout: default-events
   </div>  
 
   <div class="row l-white-bg">
-    <div class="six columns">
+    <div class="twelve columns">
       <h3>Night O'wl (St. Patricks Day Edition)<br> <span class="kicker">Monday, March 17th, 7p - 11p</span></h3>
+    </div>
+    <div class="six columns">
       <p>This St. Patricks Day edition of Night Owl will be a Bloomington love fest. We're kicking off a project to create a site to share why we love life in Bloomington with a Night Owl hackathon! Anyone who loves Bloomington will be able to contribute.</p>
       <p>You can also just stop by to geek out, see the space and visit with some like minded people. Cowork Btown will have beer, snacks, music, and camaraderie. Take the opportunity to share what you’ve been working on or join the hackathon.</p>
 
