update night owl info

--- a/events-success.html
+++ b/events-success.html
@@ -19,10 +19,10 @@ layout: default-events
 
   <div class="row l-white-bg">
     <div class="twelve columns">
-      <h3>Night O'wl (St. Patricks Day Edition)<br> <span class="kicker">Monday, March 17th, 7p - 11p</span></h3>
+      <h3>Night Owl<br> <span class="kicker">TBD</span></h3>
     </div>
     <div class="six columns">
-      <p>This St. Patricks Day edition of Night Owl will be a Bloomington love fest. We're kicking off a project to create a site to share why we love life in Bloomington with a Night Owl hackathon! Anyone who loves Bloomington will be able to contribute.</p>
+      <p>This edition of Night Owl will be a Bloomington love fest. We're kicking off a project to create a site to share why we love life in Bloomington with a Night Owl hackathon! Anyone who loves Bloomington will be able to contribute.</p>
       <p>You can also just stop by to geek out, see the space and visit with some like minded people. Cowork Btown will have beer, snacks, music, and camaraderie. Take the opportunity to share what you’ve been working on or join the hackathon.</p>
 
       <p>Come and stay the whole time or just drop in to say hello.</p>
@@ -41,7 +41,6 @@ layout: default-events
     <div class="six columns">
        <div class="highlightBg">
           <h4>Night Owl Hackathon</h4>
-          <p>Hackathon will kickoff around <strong>7:30p</strong>.</p>
           <p><img src="images/site/lib-logo.png" style="height:55px"></p>
           <p>Cowork Btown is kicking of a project to create something to give back to a city that we love. Life in Bloomongton will share with the world why we love to live and work in Bloomington.</p>
           <p>We invite anyone from the community to come help in any way they'd like.</p>
