Update events link to meet up page

--- a/kelley/index.html
+++ b/kelley/index.html
@@ -11,7 +11,7 @@ layout: default-dir-up
 
   <div class="row l-white-bg">
     <div class="ten offset-by-one columns">
-      <h4>Cowork Btown is very excited to partner with Kelley School of Business MBA program. Our community is a great way to meet a lot of great people and plug into the Bloomington's young professional scene!</h4>
+      <h4>Cowork Btown is very excited to partner with Kelley School of Business MBA program. Our community is a great way to meet a lot of great people and plug into Bloomington's professional scene! It's also a pretty cool place to work too!</h4>
     </div>
   </div> 
 
